--- a/CLI/CLI.csproj
+++ b/CLI/CLI.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>LaboReflection.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
 </Project>
