--- a/AppCLI/AppCLI.csproj
+++ b/AppCLI/AppCLI.csproj
@@ -1,11 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>LaboReflection.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>SyntraAB.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SyntraABTools\SyntraABTools.csproj" />
+  </ItemGroup>
 
 </Project>
