--- a/PluginLibrary/PluginLibrary.csproj
+++ b/PluginLibrary/PluginLibrary.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Authors>Sung Lostrie</Authors>
     <Company>SyntraAB</Company>
     <Description>Working with reflection, external libraries without defining project dependencies to it</Description>
